--- a/src/client/modules/ui/header/header.html
+++ b/src/client/modules/ui/header/header.html
@@ -52,7 +52,7 @@
                         <a class="navbar-item">
                             Contact
                         </a>
-                        <hr class="navbar-divider" />
+                        <hr class="navbar-divider">
                         <a class="navbar-item">
                             Report an issue
                         </a>
