Switched to synthetic shadow DOM for styling

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -4,19 +4,21 @@
         <meta charset="utf-8" />
         <title>E-Bikes Manufacturing</title>
         <style>
+            html,
+            body {
+                height: 100%;
+                background-color: rgba(245, 245, 245);
+            }
             body {
                 font-family: Helvetica, Arial, sans-serif;
                 margin: 0;
                 padding: 0;
-                background-color: rgba(245, 245, 245);
                 overflow-x: hidden;
             }
         </style>
         <meta name="viewport" content="width=device-width,initial-scale=1" />
-        <link
-            rel="shortcut icon"
-            href="https://developer.salesforce.com/files/js-dev/favicon.ico"
-        />
+        <link rel="shortcut icon" href="resources/favicon.ico" />
+        <link rel="stylesheet" href="resources/dependencies/bulma.min.css" />
     </head>
     <body>
         <ui-app></ui-app>
