--- a/src/client/modules/ui/header/header.html
+++ b/src/client/modules/ui/header/header.html
@@ -6,7 +6,7 @@
     >
         <div class="navbar-brand">
             <a class="navbar-item" href="#">
-                <img src="resources/app-logo.svg" />
+                <img src="assets/app-logo.svg" />
                 <span class="app-name">E-Bikes Manufacturing</span>
             </a>
 
@@ -25,37 +25,21 @@
 
         <div id="navbar" class="navbar-menu">
             <div class="navbar-start">
-                <a class="navbar-item">
-                    Home
-                </a>
+                <a class="navbar-item"> Home </a>
 
-                <a class="navbar-item is-active">
-                    Orders
-                </a>
+                <a class="navbar-item is-active"> Orders </a>
 
-                <a class="navbar-item">
-                    Tracking
-                </a>
+                <a class="navbar-item"> Tracking </a>
 
                 <div class="navbar-item has-dropdown is-hoverable">
-                    <a class="navbar-link">
-                        Manage
-                    </a>
+                    <a class="navbar-link"> Manage </a>
 
                     <div class="navbar-dropdown">
-                        <a class="navbar-item">
-                            About
-                        </a>
-                        <a class="navbar-item">
-                            Jobs
-                        </a>
-                        <a class="navbar-item">
-                            Contact
-                        </a>
-                        <hr class="navbar-divider">
-                        <a class="navbar-item">
-                            Report an issue
-                        </a>
+                        <a class="navbar-item"> About </a>
+                        <a class="navbar-item"> Jobs </a>
+                        <a class="navbar-item"> Contact </a>
+                        <hr class="navbar-divider" />
+                        <a class="navbar-item"> Report an issue </a>
                     </div>
                 </div>
             </div>
